fixed redirection of home in individual stream as well as heading alignment

--- a/html/live/livetheme.css
+++ b/html/live/livetheme.css
@@ -111,7 +111,7 @@
   color: #ffffff;
 }
 
-h1 {
+h2 {
   color: #ffffff;
   text-align: center;
   font-weight: bold;
